[gd_scene load_steps=2 format=2]

[ext_resource path="res://scenes/menus/Lobby.gd" type="Script" id=1]

[node name="Lobby" type="Control"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -320.0
margin_top = -200.0
margin_right = 320.0
margin_bottom = 200.0
size_flags_horizontal = 2
size_flags_vertical = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LobbyPanel" type="Panel" parent="."]
margin_left = -641.0
margin_top = -346.0
margin_right = -256.0
margin_bottom = -128.0
rect_scale = Vector2( 5, 5 )
size_flags_horizontal = 2
size_flags_vertical = 2
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AddressLabel" type="Label" parent="LobbyPanel"]
margin_left = 11.2303
margin_top = 10.4101
margin_right = 63.2303
margin_bottom = 24.4101
size_flags_horizontal = 2
size_flags_vertical = 0
text = "Address"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Address" type="LineEdit" parent="LobbyPanel"]
margin_left = 70.0
margin_top = 5.0
margin_right = 377.0
margin_bottom = 29.0
size_flags_horizontal = 2
size_flags_vertical = 2
text = "127.0.0.1"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="UsernameLabel" type="Label" parent="LobbyPanel"]
margin_left = 11.3407
margin_top = 71.3573
margin_right = 104.341
margin_bottom = 85.3573
size_flags_horizontal = 2
size_flags_vertical = 0
text = "Player 1 Name"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Username" type="LineEdit" parent="LobbyPanel"]
margin_left = 11.5389
margin_top = 87.1906
margin_right = 143.539
margin_bottom = 111.191
size_flags_horizontal = 2
size_flags_vertical = 2
text = "Player"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AbilitySelectLabel" type="Label" parent="LobbyPanel"]
margin_left = 12.9307
margin_top = 117.468
margin_right = 105.931
margin_bottom = 131.468
size_flags_horizontal = 2
size_flags_vertical = 0
text = "Player 1 Ability"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AbilitySelect" type="OptionButton" parent="LobbyPanel"]
margin_left = 12.88
margin_top = 139.2
margin_right = 144.88
margin_bottom = 159.2
text = "Player 1 Ability"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="UsernameLabel2" type="Label" parent="LobbyPanel"]
margin_left = 192.969
margin_top = 72.7367
margin_right = 285.969
margin_bottom = 86.7367
size_flags_horizontal = 2
size_flags_vertical = 0
text = "Player 2 Name"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Username2" type="LineEdit" parent="LobbyPanel"]
margin_left = 193.429
margin_top = 88.5483
margin_right = 325.429
margin_bottom = 112.548
size_flags_horizontal = 2
size_flags_vertical = 2
text = "Player"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AbilitySelectLabel2" type="Label" parent="LobbyPanel"]
margin_left = 194.559
margin_top = 118.847
margin_right = 287.559
margin_bottom = 132.847
size_flags_horizontal = 2
size_flags_vertical = 0
text = "Player 2 Ability"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AbilitySelect2" type="OptionButton" parent="LobbyPanel"]
margin_left = 195.202
margin_top = 139.2
margin_right = 327.202
margin_bottom = 159.2
text = "Player 2 Ability"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="StartButton" type="Button" parent="LobbyPanel"]
visible = false
margin_left = 145.919
margin_top = 35.59
margin_right = 250.919
margin_bottom = 55.59
size_flags_horizontal = 2
size_flags_vertical = 2
text = "Start"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HostButton" type="Button" parent="LobbyPanel"]
visible = false
margin_left = 11.88
margin_top = 34.8194
margin_right = 113.88
margin_bottom = 54.8194
size_flags_horizontal = 2
size_flags_vertical = 2
text = "Host"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="JoinButton" type="Button" parent="LobbyPanel"]
visible = false
margin_left = 277.562
margin_top = 35.4094
margin_right = 375.562
margin_bottom = 55.4094
size_flags_horizontal = 2
size_flags_vertical = 2
text = "Join"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="StartOnlineButton" type="Button" parent="LobbyPanel"]
visible = false
margin_left = 146.969
margin_top = 35.5799
margin_right = 252.969
margin_bottom = 55.5799
text = "Start"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="StatusOk" type="Label" parent="LobbyPanel"]
margin_left = 7.63039
margin_top = 197.413
margin_right = 9.63039
margin_bottom = 211.413
size_flags_horizontal = 2
size_flags_vertical = 0
custom_colors/font_color = Color( 0, 1, 0.015625, 1 )
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="StatusFail" type="Label" parent="LobbyPanel"]
margin_left = 9.52069
margin_top = 198.226
margin_right = 10.5207
margin_bottom = 212.226
size_flags_horizontal = 2
size_flags_vertical = 0
custom_colors/font_color = Color( 1, 0, 0, 1 )
align = 1
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="pressed" from="LobbyPanel/StartButton" to="LobbyPanel" method="_on_StartButton_pressed"]
[connection signal="pressed" from="LobbyPanel/HostButton" to="LobbyPanel" method="_on_host_pressed"]
[connection signal="pressed" from="LobbyPanel/JoinButton" to="LobbyPanel" method="_on_join_pressed"]
[connection signal="pressed" from="LobbyPanel/StartOnlineButton" to="LobbyPanel" method="_on_StartOnlineButton_pressed"]
